Justifying the French tutorials documentation

--- a/docs/fr/Tutos.tex
+++ b/docs/fr/Tutos.tex
@@ -236,49 +236,88 @@
 \end{justify}
 
 \begin{justify}
-    Regardez la manière dont la fonction \textbf{\color{mauve}CheckTextColor} est appelée, pour vous aider.
+    Regardez la manière dont la fonction \textbf{\color{mauve}CheckTextColor} est appelée, pour vous aider.\\[1\baselineskip]
 \end{justify}
 
+\begin{justify}
+	Maintenant, rendez vous dans le fichier de librairie
 
-Maintenant, rendez vous dans le fichier de librairie
-\begin{itemize}
-    \item \textbf{\color{orange}\$\_\_BU\_MAIN\_ROOT\_DIR\_PATH\color{lime}/lib/functions/main/Decho.lib}\\[1\baselineskip]
-\end{itemize}
+	\begin{itemize}
+    	\item \textbf{\color{orange}\$\_\_BU\_MAIN\_ROOT\_DIR\_PATH\color{lime}/lib/functions/main/Decho.lib}
+	\end{itemize}
+\end{justify}
 
-Puis repérez la sous-catégorie suivante :
-\begin{itemize}
-    \item \textbf{WRITING DIFFERENTLY COLORED/FORMATTED TEXT BETWEEN TEXT - LIST}\\[1\baselineskip]
-\end{itemize}
+\begin{justify}
+	Puis repérez la sous-catégorie suivante :
 
-Repérez les premières fonctions, toutes nommées \textbf{\color{mauve}Decho\_<\$nom\_de\_couleur\_en\_anglais>}, puis ajoutez une fonction pour chaque couleur en copiant simplement l'une des fonctions en la renommant \textbf{\color{mauve}Decho\_<\$nom\_de\_la\_nouvelle\_couleur>} et en remplaçant le second argument de la fonction \textbf{\color{mauve}Decho} par le nom de la variable globale de nom de couleur associée.\\[2\baselineskip]
+	\begin{itemize}
+    	\item \textbf{WRITING DIFFERENTLY COLORED/FORMATTED TEXT BETWEEN TEXT - LIST}
+	\end{itemize}
+\end{justify}
 
+\begin{justify}
+	Repérez les premières fonctions, toutes nommées \textbf{\color{mauve}Decho\_<\$nom\_de\_couleur\_en\_anglais>}, puis ajoutez une fonction pour chaque couleur en copiant simplement l'une des fonctions en l renommant \textbf{\color{mauve}Decho\_<\$nom\_de\_la\_nouvelle\_couleur>} et en remplaçant le second argument de la fonction \textbf{\color{mauve}Decho} par le nom de la variable globale de nom de couleur associée.\\[1\baselineskip]
+\end{justify}
 
-Ensuite, rendez vous dans le fichier de librairie \textbf{\color{orange}\$\_\_BU\_MAIN\_ROOT\_DIR\_PATH\color{lime}/lib/functions/main/Echo.lib}, puis dans la sous-catégorie suivante :\\
-\begin{itemize}
-    \item \textbf{DISPLAYING A COLORED MESSAGE WITH A PAUSE TIME DEPENDING ON THE "\$\_\_BU\_MAIN\_STAT\_TIME\_TXT" status variable}\\[1\baselineskip]
-\end{itemize}
+\begin{justify}
+	Ensuite, rendez vous dans ce fichier de librairie :
 
- Vous y trouvrerez des fonctions nommées \textbf{\color{mauve}Echo<\$\_nom\_couleur\_en\_anglais>}.\\[1\baselineskip]
- 
- Copiez-collez simplement l'une de ces fonctions, et remplacez y le nom de la couleur par celui de la nouvelle couleur.\\[2\baselineskip]
+	\begin{itemize}
+		\item \textbf{\color{orange}\$\_\_BU\_MAIN\_ROOT\_DIR\_PATH\color{lime}/lib/functions/main/Echo.lib}
+	\end{itemize}		
+\end{justify}
 
+\begin{justify}
+	Puis dans la sous-catégorie suivante :
+	
+	\begin{itemize}
+    	\item \textbf{DISPLAYING A COLORED MESSAGE WITH A PAUSE TIME DEPENDING ON THE\\ "\$\_\_BU\_MAIN\_STAT\_TIME\_TXT" status variable}
+	\end{itemize}
+\end{justify}
 
-Enfin, rendez-vous dans le fichier de librairie \textbf{\color{orange}\$\_\_BU\_MAIN\_ROOT\_DIR\_PATH\color{lime}/lib/functions/main/Headers.lib}, puis dans la sous-section \textbf{UNICOLOR HEADERS}. Repérez la liste de fonctions nommées :
-\begin{itemize}
-    \item \textbf{\color{mauve}Header<\$nom\_de\_la\_couleur\_en\_anglais>}\linebreak
-\end{itemize}
+\begin{justify}
+	Vous y trouvrerez des fonctions nommées \textbf{\color{mauve}Echo<\$\_nom\_couleur\_en\_anglais>}.
+\end{justify} 
 
-Copiez simplement l'une des fonctions, puis renommez la \textbf{\color{mauve}Header<\$nom\_de\_la\_couleur\_en\_anglais>},
+\begin{justify}
+Copiez-collez simplement l'une de ces fonctions, et remplacez y le nom de la couleur par celui de la nouvelle couleur.\\[1\baselineskip]
+\end{justify}
+
+\begin{justify}
+	Enfin, rendez-vous dans ce fichier de librairie :
+	
+	\begin{itemize}	
+		\item \textbf{\color{orange}\$\_\_BU\_MAIN\_ROOT\_DIR\_PATH\color{lime}/lib/functions/main/Headers.lib}
+	\end{itemize}	
+\end{justify}	
+
+\begin{justify}
+	Puis dans la sous-section \textbf{UNICOLOR HEADERS}, repérez la liste de fonctions nommées :
+
+	\begin{itemize}
+    	\item \textbf{\color{mauve}Header<\$nom\_de\_la\_couleur\_en\_anglais>}
+	\end{itemize}
+\end{justify}
+
+\begin{justify}
+	Copiez simplement l'une des fonctions, puis renommez la \textbf{\color{mauve}Header<\$nom\_de\_la\_couleur\_en\_anglais>},
 et modifiez les noms des premier et troisième arguments de la fonction \textbf{\color{mauve}HeaderBase}, en les
-remplaçant par le nom de la variable globale de noms de couleurs souhaitée.\\[1\baselineskip]
+remplaçant par le nom de la variable globale de noms de couleurs souhaitée.
+\end{justify}
 
-Rendez vous ensuite dans la sous-section suivante, nommée \textbf{BICOLOR HEADERS}, puis pour chaque liste de fonction par couleur, copiez-collez une fonction, puis rennomez la en ne changeant que le nom de la deuxième couleur, puis le nom du troisième argument de la fonction \textbf{\color{mauve}HeaderBase}.\\[1\baselineskip]
+\begin{justify}
+	Rendez vous ensuite dans la sous-section suivante, nommée \textbf{BICOLOR HEADERS}, puis pour chaque liste de fonction par couleur, copiez-collez une fonction, puis renomez la en ne changeant que le nom de la deuxième couleur, puis le nom du troisième argument de la fonction \textbf{\color{mauve}HeaderBase}.
+\end{justify}
 
-Finalement, pour chaque couleur que vous ajoutez, créez une nouvelle liste de fonctions bicolores,
+\begin{justify}
+	Finalement, pour chaque couleur que vous ajoutez, créez une nouvelle liste de fonctions bicolores,
 toujours en respectant l'ordre alphabétique du nom des couleurs en anglais (voir les commentaires
-avant chaque liste).\\[1\baselineskip]
+avant chaque liste).
+\end{justify}
 
-Créez une fonction pour chacune des couleurs à supporter, nommée \textbf{\color{mauve}Header}, suivie du \textbf{\color{mauve}nom de la nouvelle couleur}, suivie enfin du \textbf{\color{mauve}nom d'une autre couleur}.\\[1\baselineskip]
+\begin{justify}
+	Créez une fonction pour chacune des couleurs à supporter, nommée \textbf{\color{mauve}Header}, suivie du \textbf{\color{mauve}nom de la nouvelle couleur}, suivie enfin du \textbf{\color{mauve}nom d'une autre couleur}.
+\end{justify}
 
 Modifiez la valeur du premier argument en appelant la variable globale de nom de couleur associée à la nouvelle couleur, puis la valeur du troisième argument en appelant la variable globale de nom de couleur dédiée au nom de l'autre couleur à afficher.\\[1\baselineskip]
 
