--- a/docs/fr/Tutos.tex
+++ b/docs/fr/Tutos.tex
@@ -319,11 +319,13 @@ avant chaque liste).
 	Créez une fonction pour chacune des couleurs à supporter, nommée \textbf{\color{mauve}Header}, suivie du \textbf{\color{mauve}nom de la nouvelle couleur}, suivie enfin du \textbf{\color{mauve}nom d'une autre couleur}.
 \end{justify}
 
-Modifiez la valeur du premier argument en appelant la variable globale de nom de couleur associée à la nouvelle couleur, puis la valeur du troisième argument en appelant la variable globale de nom de couleur dédiée au nom de l'autre couleur à afficher.\\[1\baselineskip]
+\begin{justify}
+    Modifiez la valeur du premier argument en appelant la variable globale de nom de couleur associée à la nouvelle couleur, puis la valeur du troisième argument en appelant la variable globale de nom de couleur dédiée au nom de l'autre couleur à afficher.
+\end{justify}
 
-Encore une fois, n'hésitez pas à jeter un œil à l'organisation des autres listes de fonctions d'affichage\linebreak
-bicolore pour vous aider.\\[1\baselineskip]
-
+\begin{justify}
+    Encore une fois, n'hésitez pas à jeter un œil à l'organisation des autres listes de fonctions d'affichage bicolore pour vous aider.
+\end{justify}
 
 % -----------------------
 
@@ -334,7 +336,9 @@ bicolore pour vous aider.\\[1\baselineskip]
 \color{green}
 \subsection{Ajouter un nouveau module}\color{white}
 
-\textbf{Note :} Le fonctionnement des modules est détaillé dans la section \textbf{\color{red}Introduction} du fichier\linebreak \textbf{\color{lime}Bash-utils/docs/fr/modules}.
+\begin{justify}
+    \textbf{Note :} Le fonctionnement des modules est détaillé dans la section \textbf{\color{red}Introduction} du fichier de documentation \textbf{\color{lime}Bash-utils/docs/fr/modules/Fonctionnement.pdf}.
+\end{justify}
 
 \color{blue}
 \subsubsection{Fichiers à exécuter}\color{white}
@@ -351,22 +355,24 @@ bicolore pour vous aider.\\[1\baselineskip]
 \color{blue}
 \subsubsection{Consignes}\color{white}
 
-\textbf{De manière automatique :}
-\begin{itemize}
-    \item Rendez-vous EXACTEMENT dans le dossier du fichier shell \textbf{\color{lime}mkmodules.sh}, puis exécutez juste\linebreak
-    ce script en lui passant en argument les noms des modules à créer.\\[1\baselineskip]
+\begin{justify}
+    \textbf{De manière automatique :}
 
-    \item \textbf{Astuce :} Vous pouvez vous y rendre directement via le lien symbolique \textbf{\color{lime}bin} dans le dossier racine de la librairie. \textbf{Attention}, pour ceux qui utilisent WSL, ce lien ne marche pas dans le moindre explorateur de fichiers sur Windows, mais uniquement en ligne de commande avec votre distribution Linux.\\[1\baselineskip]
-\end{itemize}
+    \begin{itemize}
+        \item Rendez-vous EXACTEMENT dans le dossier du fichier shell \textbf{\color{lime}mkmodules.sh}, puis exécutez juste ce script en lui passant en argument les noms des modules à créer.\\
 
-\textbf{De manière manuelle :}
-\begin{itemize}
-    \item  Rendez vous dans le dossier de configurations des modules \textbf{\color{lime}.Bash-utils}, puis rendez vous dans
-    le dossier \textbf{\color{lime}config/modules}. Créez un nouveau dossier pour chaque module à créer, puis dans chacun de ces dossiers, créez un fichier nommé \textbf{\color{lime}module.conf}.\\[1\baselineskip]
+        \item \textbf{Astuce :} Vous pouvez vous y rendre directement via le lien symbolique \textbf{\color{lime}bin} dans le dossier racine de la librairie. \textbf{Attention}, pour ceux qui utilisent WSL, ce lien ne marche pas dans le moindre explorateur de fichiers sur Windows, mais uniquement en ligne de commande avec votre distribution Linux.
+    \end{itemize}
+\end{justify}
 
-    \item Revenez de nouveau dans le dossier racine \textbf{\color{lime}.Bash-utils}, puis allez dans le dossier \textbf{\color{lime}modules}.\linebreak
-    Créez un nouveau dossier pour chaque module, puis dans chacun de ces dossiers, créez un fichier nommé \textbf{\color{lime}Initializer.sh}.\\[1\baselineskip]
-\end{itemize}
+\begin{justify}
+    \textbf{De manière manuelle :}
+    \begin{itemize}
+        \item  Rendez vous dans le dossier de configurations des modules \textbf{\color{lime}.Bash-utils}, puis rendez vous dans le dossier \textbf{\color{lime}config/modules}. Créez un nouveau dossier pour chaque module à créer, puis dans chacun de ces dossiers, créez un fichier nommé \textbf{\color{lime}module.conf}.\\
+
+        \item Revenez de nouveau dans le dossier racine \textbf{\color{lime}.Bash-utils}, puis allez dans le dossier \textbf{\color{lime}modules}. Créez un nouveau dossier pour chaque module, puis dans chacun de ces dossiers, créez un fichier nommé \textbf{\color{lime}Initializer.sh}.
+    \end{itemize}
+\end{justify}
 
 
 % -----------------------
@@ -393,11 +399,13 @@ bicolore pour vous aider.\\[1\baselineskip]
 \color{blue}
 \subsubsection{Fichiers de librairie à éditer}\color{white}
 
-\begin{itemize}
-    \item \textbf{\color{orange}\$\_\_BU\_MAIN\_ROOT\_DIR\_PATH\color{lime}/lib/functions/main/CheckSTAT.lib}\\[1\baselineskip]
+\begin{justify}
+    \begin{itemize}
+        \item \textbf{\color{orange}\$\_\_BU\_MAIN\_ROOT\_DIR\_PATH\color{lime}/lib/functions/main/CheckSTAT.lib}\\
 
-    \item \textbf{Tout fichier où vous avez créé une nouvelle fonction ou modifié une fonction existante, où vous souhaitez appeler cette variable}\\[1\baselineskip]
-\end{itemize}
+        \item \textbf{Tout fichier où vous avez créé une nouvelle fonction ou modifié une fonction existante, où vous souhaitez appeler cette variable}
+    \end{itemize}
+\end{justify}
 
 
 % -----------------------
@@ -407,48 +415,79 @@ bicolore pour vous aider.\\[1\baselineskip]
 \color{blue}
 \subsubsection{Consignes}\color{white}
 
-Rendez vous dans le fichier de configurations \textbf{\color{lime}Status.conf}, puis créez une nouvelle variable commençant par \textbf{\color{orange}\$\_\_BU\_MAIN\_STAT\_}, puis, de préférence en anglais, nommez le reste de la variable selon l'action nécessitant l'appel de cette variable.\\[1\baselineskip]
+\begin{justify}
+    Rendez vous dans le fichier de configurations \textbf{\color{lime}Status.conf}, puis créez une nouvelle variable commençant par \textbf{\color{orange}\$\_\_BU\_MAIN\_STAT\_}, puis, de préférence en anglais, nommez le reste de la variable selon l'action nécessitant l'appel de cette variable.
+\end{justify}
 
-Comme les autres variables définies dans ce fichier, décrivez brièvement le but de cette variable, puis indiquez quelles valeurs sont acceptées, avant de définir une valeur par défaut, tout en prenant le soin, si vous utilisez l'utilitaire \textbf{\color{gray}Shellcheck}, de désactiver l'affichage du message d'avertissement retourné avec le code \textbf{SC2034}, vous indiquant que la variable est définie, mais non-utilisée dans ce fichier.\\[1\baselineskip]
+\begin{justify}
+    Comme les autres variables définies dans ce fichier, décrivez brièvement le but de cette variable, puis indiquez quelles valeurs sont acceptées, avant de définir une valeur par défaut, tout en prenant le soin, si vous utilisez l'utilitaire \textbf{\color{gray}Shellcheck}, de désactiver l'affichage du message d'avertissement retourné avec le code \textbf{SC2034}, vous indiquant que la variable est définie, mais non-utilisée dans ce fichier.
+\end{justify}
 
-Une fois la nouvelle variable créée, rendez-vous dans le fichier de librairie \textbf{\color{lime}CheckSTAT.lib}, dans la sous-section \textbf{CHECKINGS} puis créez une fonction dont le nom commence par \textbf{\color{mauve}CheckSTAT\_}, puis ajoutez-y le nom de la variable de statut que vous venez de créer dans le fichier précédent, sans le double tiret du 8.\\[1\baselineskip]
+\begin{justify}
+    Une fois la nouvelle variable créée, rendez-vous dans le fichier de librairie \textbf{\color{lime}CheckSTAT.lib}, dans la sous-section \textbf{CHECKINGS} puis créez une fonction dont le nom commence par \textbf{\color{mauve}CheckSTAT\_}, puis ajoutez-y le nom de la variable de statut que vous venez de créer dans le fichier précédent, sans le double tiret du 8.
+\end{justify}
 
-Copiez-collez la définition des paramètres de n'importe quelle autre fonction, puis définissez une section de variables, où vous créerez un tableau (\textbf{pa\_correctValues} par exemple, en y passant la déclaration \textbf{\color{gray}local} au préalable pour assurer que ce dernier n'ait qu'une portée locale (CÀD dans la fonction en elle même, sans accès via l'extérieur)) dans lequel vous passerez en valeurs les valeurs acceptées pour cette nouvelle variable de statut.\\[1\baselineskip]
+\begin{justify}
+    Copiez-collez la définition des paramètres de n'importe quelle autre fonction, puis définissez une section de variables, où vous créerez un tableau (\textbf{pa\_correctValues} par exemple, en y passant la déclaration \textbf{\color{gray}local} au préalable pour assurer que ce dernier n'ait qu'une portée locale (CÀD dans la fonction en elle même, sans accès via l'extérieur)) dans lequel vous passerez en valeurs les valeurs acceptées pour cette nouvelle variable de statut.
+\end{justify}
 
-Dans la section \textbf{code}, ajoutez une nouvelle condition où vous vérifirez si la valeur de votre variable de statut est différente de chacune des valeurs définies dans le tableau défini dans la section \textbf{Variables}.\\[1\baselineskip]
+\begin{justify}
+    Dans la section \textbf{code}, ajoutez une nouvelle condition où vous vérifirez si la valeur de votre variable de statut est différente de chacune des valeurs définies dans le tableau défini dans la section \textbf{Variables}.
+\end{justify}
 
-Dans cette condition, appelez la fonction \textbf{\color{mauve}ConfEcho}, puis passez en arguments :
-\begin{itemize}
-    \item Le paramètre \textbf{\color{orange}\$p\_file}\\[1\baselineskip]
+\begin{justify}
+    Dans cette condition, appelez la fonction \textbf{\color{mauve}ConfEcho}, puis passez en arguments :
 
-    \item Le paramètre \textbf{\color{orange}\$p\_lineno}\\[1\baselineskip]
+    \begin{itemize}
+        \item Le paramètre \textbf{\color{orange}\$p\_file}\\
 
-    \item Le nom de la variable.\\[1\baselineskip]
+        \item Le paramètre \textbf{\color{orange}\$p\_lineno}\\
 
-    \item Idem, mais sans le signe \textbf{\$}\\[1\baselineskip]
+        \item Le nom de la variable.\\
 
-    \item Le tableau de valeurs.\\[1\baselineskip]
-\end{itemize}
+        \item Idem, mais sans le signe \textbf{\$}\\
 
-Puis n'oubliez pas d'appelez la déclaration \textbf{\color{gray}return} en lui passant la valeur 1, indiquant que l'exécution de la fonction ne s'est pas déroulée correctement.\\[1\baselineskip]
+        \item Le tableau de valeurs.
+    \end{itemize}
+\end{justify}
 
-Puis à l'extérieur de la condition, appelez de nouveau la déclaration \textbf{\color{gray}return} en lui passant cette fois la valeur 0.\\[1\baselineskip]
+\begin{justify}
+    Puis n'oubliez pas d'appelez la déclaration \textbf{\color{gray}return} en lui passant la valeur 1, indiquant que l'exécution de la fonction ne s'est pas déroulée correctement.
+\end{justify}
 
-Une fois ceci fait, rendez vous tout à la fin de la sous-section actuelle, dans la fonction \textbf{\color{mauve}CheckProjectStatusVars}, puis appelez-y la ou les fonctions que vous venez de créer, en y passant en argument les variables \textbf{\color{orange}\$p\_file} et \textbf{\color{orange}\$p\_lineno}.\\[2\baselineskip]
+\begin{justify}
+    Puis à l'extérieur de la condition, appelez de nouveau la déclaration \textbf{\color{gray}return} en lui passant cette fois la valeur 0.
+\end{justify}
+
+\begin{justify}
+    Une fois ceci fait, rendez vous tout à la fin de la sous-section actuelle, dans la fonction \textbf{\color{mauve}CheckProjectStatusVars}, puis appelez-y la ou les fonctions que vous venez de créer, en y passant en argument les variables \textbf{\color{orange}\$p\_file} et \textbf{\color{orange}\$p\_lineno}.\\[1\baselineskip]
+\end{justify}
 
 
-Maintenant, rendez vous dans la sous-section \textbf{CHANGING VALUES MORE EASILY}. Créez une nouvelle fonction, dont le nom commence par \textbf{\color{mauve}ChangeSTAT\_}, suivie du nom de votre variable de statut, sans le \textbf{\color{orange}\$\_\_BU\_MAIN\_STAT}.\\[1\baselineskip]
+\begin{justify}
+    Maintenant, rendez vous dans la sous-section \textbf{CHANGING VALUES MORE EASILY}. Créez une nouvelle fonction, dont le nom commence par \textbf{\color{mauve}ChangeSTAT\_}, suivie du nom de votre variable de statut, sans le \textbf{\color{orange}\$\_\_BU\_MAIN\_STAT}.
+\end{justify}
 
-Dans cette nouvelle fonction, appelez votre fonction fraîchement créée en redéfinissant votre variable de statut (l'écrire sans le signe \textbf{\$}), en lui passant le paramètre positionnel \textbf{\$l}; puis appelez la fonction que vous avez créé en lui passant en arguments les paramètres positionnels \textbf{\$2} et \textbf{\$3}.\\[1\baselineskip]
+\begin{justify}
+    Dans cette nouvelle fonction, appelez votre fonction fraîchement créée en redéfinissant votre variable de statut (l'écrire sans le signe \textbf{\$}), en lui passant le paramètre positionnel \textbf{\$l}; puis appelez la fonction que vous avez créé en lui passant en arguments les paramètres positionnels \textbf{\$2} et \textbf{\$3}.
+\end{justify}
 
-N'oubliez pas les déclarations de retour (\textbf{\color{gray}return 1} et \textbf{\color{gray}return 0})\\[2\baselineskip]
+\begin{justify}
+    N'oubliez pas les déclarations de retour (\textbf{\color{gray}return 1} et \textbf{\color{gray}return 0})\\[1\baselineskip]
+\end{justify}
 
 
-Enfin, \textbf{SI et seulement SI} votre nouvelle variable accepte seulement les valeurs \textbf{true} ou \textbf{false}, rendez vous dans la sous-section \textbf{EASIER CHECKING BOOLEAN VALUES} pour créer une dernière fonction que vous nommerez \textbf{\color{mauve}CheckStat} (attention à la casse), suivie du nom de l'action accomplie par votre nouvelle variable (regardez les noms des fonctions existantes pour vous donner une idée).\\[1\baselineskip]
+\begin{justify}
+    Enfin, \textbf{SI et seulement SI} votre nouvelle variable accepte seulement les valeurs \textbf{true} ou \textbf{false}, rendez vous dans la sous-section \textbf{EASIER CHECKING BOOLEAN VALUES} pour créer une dernière fonction que vous nommerez \textbf{\color{mauve}CheckStat} (attention à la casse), suivie du nom de l'action accomplie par votre nouvelle variable (regardez les noms des fonctions existantes pour vous donner une idée).
+\end{justify}
 
-Il est recommandé de vérifier si la valeur enregistrée dans votre variable soit égale à vrai (\textbf{true}), et de retourner 0, et 1 le cas échéant.\\[2\baselineskip]
+\begin{justify}
+Il est recommandé de vérifier si la valeur enregistrée dans votre variable soit égale à vrai (\textbf{true}), et de retourner 0, et 1 le cas échéant.
+\end{justify}
 
-Maintenant, vous pouvez utiliser cette nouvelle variable et ces nouvelles fonctions là où vous le souhaitez dans le module principal, voire dans un autre module, puis dans vos propres scripts.\\[1\baselineskip]
+\begin{justify}
+    Maintenant, vous pouvez utiliser cette nouvelle variable et ces nouvelles fonctions là où vous le souhaitez dans le module principal, voire dans un autre module, puis dans vos propres scripts.
+\end{justify}
 
 
 % -----------------------
