Ended the justification of the French modules functionning documentation

--- a/docs/fr/modules/Fonctionnement.tex
+++ b/docs/fr/modules/Fonctionnement.tex
@@ -31,98 +31,170 @@
 \definecolor{mauve}{RGB}{128, 0, 128}
 
 \begin{document}
- \maketitle
- \tableofcontents
- \newpage
+\maketitle
+\tableofcontents
+\newpage
 
- \color{red}
- \section{Introduction}\color{white}
+\color{red}
+\section{Introduction}\color{white}
 
- \textbf{Note 1 :} La procédure d'initialisation des modules et de la librairie est décrite en détails dans la sous-section \textbf{\color{red}Fonctionnement \color{white} / \color{green}Étapes d'initialisation\color{white}} du fichier \textbf{\color{lime}Bash-utils/docs/fr/Introduction.pdf\color{white}}.\\[1\baselineskip]
+\begin{justify}
+    \textbf{Note 1 :} La procédure d'initialisation des modules et de la librairie est décrite en détails dans la sous-section \textbf{\color{red}Fonctionnement \color{white} / \color{green}Étapes d'initialisation\color{white}} du fichier \textbf{\color{lime}Bash-utils/docs/fr/Introduction.pdf\color{white}}.
+\end{justify}
  
- 
- \textbf{Note 2 :} La méthode de création de modules est détaillée dans la section \textbf{\color{red}Liste des tutoriels \color{white} / \color{green}Ajouter un nouveau module} du fichier \textbf{\color{lime}Bash-utils/docs/fr/Tutos.pdf}.
- 
+ \begin{justify}
+    \textbf{Note 2 :} La méthode de création de modules est détaillée dans la section \textbf{\color{red}Liste des tutoriels \color{white} / \color{green}Ajouter un nouveau module} du fichier \textbf{\color{lime}Bash-utils/docs/fr/Tutos.pdf}.
+ \end{justify}
 
- \color{green}
-  \subsection{Présentation générale}\color{white}
-  Ici, un module est un regroupement de fichiers source et de fichiers de configurations développé pour la librairie Bash Utils, dont le but est de faciliter le développement d'un script Bash selon une certaine catégorie.\linebreak
+\color{green}
+\subsection{Présentation générale}\color{white}
 
-  Le gestionnaire de modules est un outil permettant d'initialiser chaque module et de sourcer (inclure) chaque fichier associé.\linebreak
+\begin{justify}
+    Ici, un module est un regroupement de fichiers source et de fichiers de configurations développé pour la librairie Bash Utils, dont le but est de faciliter le développement d'un script Bash selon une certaine catégorie.
+\end{justify}
 
-  Pour un fonctionnement optimal, il est fortement recommandé de l'installer dans le dossier personnel de tous les utilisateurs d'un ordinateur susceptibles d'utiliser cette librairie.\linebreak
+\begin{justify}
+    Le gestionnaire de modules est un outil permettant d'initialiser chaque module et de sourcer (inclure) chaque fichier associé.
+\end{justify}
 
-  En outre, il est obligatoire de l'installer dans le dossier personnel du super-utilisateur (le dossier \textbf{\color{lime}/root\color{white}}), pour pouvoir exécuter un script utilisant la librairie Bash Utils avec les privilèges du super-utilisateur, ainsi que pour utiliser certaines fonctionnalités ne pouvant être exécutées qu'avec des privilèges du super-utilisateur.\\[1\baselineskip]
+\begin{justify}
+    Pour un fonctionnement optimal, il est fortement recommandé de l'installer dans le dossier personnel de tous les utilisateurs d'un ordinateur susceptibles d'utiliser cette librairie.
+\end{justify}
 
-
-
-  \color{green}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
-
-  \color{green}
-  \subsection{Dossiers}\color{white}
-  Ce gestionnaire est composé d'un dossier (caché pour ne pas trop encombrer le dossier personnel, où il doit être installé) : \textbf{\color{lime}.Bash-utils\color{white}}\linebreak
-  
-  Ce dossier est composé de deux sous-dossiers, comprenant également des sous dossiers : \textbf{\color{lime}config\color{white}} et \textbf{\color{lime}modules\color{white}}.\linebreak
-
-  Le dossier \textbf{\color{lime}config\color{white}} est constitué du dossier \textbf{\color{lime}modules\color{white}}, qui contient en sous-dossiers des dossiers de modules contenant les fichiers de configuration propres à chaque module.\linebreak
-
-  Le dossier \textbf{\color{lime}modules\color{white}} (sous-dossier de \textbf{\color{lime}.Bash-utils\color{white}}) contient en sous-dossier des dossiers de modules contenant les fichiers d'initialisation propres à chaque module.\\[1\baselineskip]
+\begin{justify}
+    En outre, il est obligatoire de l'installer dans le dossier personnel du super-utilisateur (le dossier \textbf{\color{lime}/root\color{white}}), pour pouvoir exécuter un script utilisant la librairie Bash Utils avec les privilèges du super-utilisateur, ainsi que pour utiliser certaines fonctionnalités ne pouvant être exécutées qu'avec des privilèges du super-utilisateur.
+\end{justify}
 
 
+% -----------------------
 
-  \color{green}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
+% -----------------------------------------------
 
-  \color{green}
-  \subsection{Architecture}\color{white}
+\color{green}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
 
-  \color{blue}
-  \subsubsection{Dossiers}\color{white}
+\color{green}
+\subsection{Dossiers}\color{white}
 
+\begin{justify}
+    Ce gestionnaire est composé d'un dossier (caché pour ne pas trop encombrer le dossier personnel, où il doit être installé) : \textbf{\color{lime}.Bash-utils\color{white}}
+\end{justify}
 
+\begin{justify}
+    Ce dossier est composé de deux sous-dossiers, comprenant également des sous dossiers : \textbf{\color{lime}config\color{white}} et \textbf{\color{lime}modules\color{white}}.
+\end{justify}
 
-  \color{blue}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
-  
-  \color{blue}
-  \subsubsection{Fichiers}\color{white}
+\begin{justify}
+    Le dossier \textbf{\color{lime}config\color{white}} est constitué du dossier \textbf{\color{lime}modules\color{white}}, qui contient en sous-dossiers des dossiers de modules contenant les fichiers de configuration propres à chaque module.
+\end{justify}
 
-
-
-  \color{green}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
-
-  \color{green}
-  \subsection{Fichiers}\color{white}
-  Ce gestionnaire est composé d'un fichier à placer dans le dossier personnel de tous les utilisateurs de la librairie :  \textbf{\color{lime}Bash-utils-init.sh\color{white}}.\linebreak
-
-  Parmi les fichiers propres à chaque module, deux d'entre eux doivent obligatoirement être présents :\linebreak
-
-  - \textbf{\color{lime}module.conf\color{white} :} Ce fichier, à placer dans le dossier \textbf{\color{lime}.Bash-utils/config/modules/\$nom\_du\_module\color{white}}, contient chaque variable utile au fichier \textbf{\color{lime}Initializer.sh\color{white}}, présenté ci-dessous.\linebreak
-
-  - \textbf{\color{lime}Initializer.sh\color{white} :} Ce fichier initialise le module et sert de fichier d'inclusion de chaque fichier source dans le dossier de librairie \textbf{\color{lime}Bash-utils/lib/\$nom\_du\_module\color{white}}, ainsi qu'aux autres fichiers de configuration à placer, de préférence, dans ce même dossier.\linebreak
-
-  Outre les fichiers de configuration et les fichiers source de chaque module, plusieurs fichiers sont présents directement dans le dossier \textbf{\color{lime}.Bash-utils\color{white}} :\linebreak
-
-  - \textbf{\color{lime}Bash-utils-root-val.path\color{white} :} Ce fichier contient le chemin du dossier racine de la librairie Bash Utils. Il est lu par le fichier \textbf{\color{lime}module.conf\color{white}}, du module \color{lime}\textbf{main\color{white}}.\\[1\baselineskip]
+\begin{justify}
+    Le dossier \textbf{\color{lime}modules\color{white}} (sous-dossier de \textbf{\color{lime}.Bash-utils\color{white}}) contient en sous-dossier des dossiers de modules contenant les fichiers d'initialisation propres à chaque module.
+\end{justify}
 
 
+% -----------------------
 
-  \color{red}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
+% -----------------------------------------------
 
- \color{red}
- \section{Liste des modules officiels}\color{white}
+\color{green}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
 
-  \color{green}
-  \subsection{Main}\color{white}
+\color{green}
+\subsection{Architecture}\color{white}
 
-  \color{blue}
-  \subsubsection{Présentation}\color{white}
-  Ce module est le module de base de la librairie. Il contient toutes les configurations et les fonctions de base de cette dernière.
+\color{blue}
+\subsubsection{Dossiers}\color{white}
 
-  \color{blue}
-  \subsubsection{Liste des fonctions}\color{white}
-  Vous pouvez retrouver ces fonctions dans les différents documents présents dans le dossier \textbf{\color{lime}Bash-utils/docs/fr/modules/main/functions\color{white}}
+\begin{justify}
 
-  \color{blue}
-  \subsubsection{Liste des configurations}\color{white}
-  Vous pouvez retrouver ces fonctions dans les différents documents présents dans le dossier \textbf{\color{lime}Bash-utils/docs/fr/modules/main/config\color{white}}
-    
+\end{justify}
+
+
+% -----------------------
+
+\color{blue}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
+
+\color{blue}
+\subsubsection{Fichiers}\color{white}
+
+\begin{justify}
+
+\end{justify}
+
+
+% -----------------------
+
+% -----------------------------------------------
+
+\color{green}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
+
+\color{green}
+\subsection{Fichiers}\color{white}
+
+\begin{justify}
+    Ce gestionnaire est composé d'un fichier à placer dans le dossier personnel de tous les utilisateurs de la librairie :  \textbf{\color{lime}Bash-utils-init.sh\color{white}}.
+\end{justify}
+
+\begin{justify}
+    Parmi les fichiers propres à chaque module, deux d'entre eux doivent obligatoirement être présents :
+
+    \begin{itemize}
+        \item \textbf{\color{lime}module.conf\color{white} :} Ce fichier, à placer dans le dossier \textbf{\color{lime}.Bash-utils/config/modules/\$nom\_du\_module\color{white}}, contient chaque variable utile au fichier \textbf{\color{lime}Initializer.sh\color{white}}, présenté ci-dessous.\\
+
+        \item \textbf{\color{lime}Initializer.sh\color{white} :} Ce fichier initialise le module et sert de fichier d'inclusion de chaque fichier source dans le dossier de librairie \textbf{\color{lime}Bash-utils/lib/\$nom\_du\_module\color{white}}, ainsi qu'aux autres fichiers de configuration à placer, de préférence, dans ce même dossier.
+    \end{itemize}
+\end{justify}
+
+\begin{justify}
+    Outre les fichiers de configuration et les fichiers source de chaque module, plusieurs fichiers sont présents directement dans le dossier \textbf{\color{lime}.Bash-utils\color{white}} :
+
+    \begin{itemize}
+        \item \textbf{\color{lime}Bash-utils-root-val.path\color{white} :} Ce fichier contient le chemin du dossier racine de la librairie Bash Utils. Il est lu par le fichier \textbf{\color{lime}module.conf\color{white}}, du module \color{lime}\textbf{main\color{white}}.
+    \end{itemize}
+\end{justify}
+
+
+% -----------------------
+
+% -----------------------------------------------
+
+% /////////////////////////////////////////////////////////////////////////////////////////////// %
+
+\color{red}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
+
+\color{red}
+\section{Liste des modules officiels}\color{white}
+
+\color{green}
+\subsection{Main}\color{white}
+
+\color{blue}
+\subsubsection{Présentation}\color{white}
+
+\begin{justify}
+    Ce module est le module de base de la librairie. Il contient toutes les configurations et les fonctions de base de cette dernière.
+\end{justify}
+
+
+% -----------------------
+
+\color{blue}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
+
+\color{blue}
+\subsubsection{Liste des fonctions}\color{white}
+
+\begin{justify}
+    Vous pouvez retrouver ces fonctions dans les différents documents présents dans le dossier \textbf{\color{lime}Bash-utils/docs/fr/modules/main/functions\color{white}}
+\end{justify}
+
+% -----------------------
+
+\color{blue}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
+
+\color{blue}
+\subsubsection{Liste des configurations}\color{white}
+
+\begin{justify}
+    Vous pouvez retrouver ces fonctions dans les différents documents présents dans le dossier \textbf{\color{lime}Bash-utils/docs/fr/modules/main/config\color{white}}
+\end{justify}
+
 \end{document}
