--- a/docs/fr/Introduction.tex
+++ b/docs/fr/Introduction.tex
@@ -47,134 +47,223 @@
 
 \color{green}
 \subsection{Présentation}\color{white}
-Bash Utils est une librairie, c'est à dire un ensemble de fonctions utilitaires, regroupées et mises à\linebreak disposition afin de pouvoir être utilisées sans avoir à les réécrire.\\[1\baselineskip]
 
-Comme son nom le suggère, il s'agit d'une librairie orientée vers le langage Bash, un langage de script permettant une interaction simple avec le shell (interpréteur de commandes) du système\linebreak d'exploitation, ainsi qu'avec ses différents programmes.\\[1\baselineskip]
+\begin{justify}
+    Bash Utils est une librairie, c'est à dire un ensemble de fonctions utilitaires, regroupées et mises à disposition afin de pouvoir être utilisées sans avoir à les réécrire.
+\end{justify}
 
-Bash Utils est divisé en deux parties : la librairie, et les modules, expliqués plus en détails dans le\linebreak fichier \textbf{\color{lime}modules/Fonctionnement.pdf\color{white}}.\\[1\baselineskip]
+\begin{justify}
+    Comme son nom le suggère, il s'agit d'une librairie orientée vers le langage Bash, un langage de script permettant une interaction simple avec le shell (interpréteur de commandes) du système d'exploitation, ainsi qu'avec ses différents programmes.
+\end{justify}
 
-Le shell utilisé est le Bash, qui est de loin le shell le plus utilisé dans le monde d'UNIX. Ce choix\linebreak s'explique non seulement par sa vaste présence, mais aussi par sa très vaste documentation\linebreak disponible et ses fonctionnalités (notamment les tableaux).\\[1\baselineskip]
+\begin{justify}
+    Bash Utils est divisé en deux parties : la librairie, et les modules, expliqués plus en détails dans le fichier \textbf{\color{lime}modules/Fonctionnement.pdf\color{white}}.
+\end{justify}
 
+\begin{justify}
+    Le shell utilisé est le Bash, qui est de loin le shell le plus utilisé dans le monde d'UNIX. Ce choix s'explique non seulement par sa vaste présence, mais aussi par sa très vaste documentation disponible et ses fonctionnalités (notamment les tableaux).
+\end{justify}
+
+
+% -----------------------
+
+% -----------------------------------------------
 
 \color{green}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
 
 \color{green}
 \subsection{Utilisation}\color{white}
-Pour utiliser cette librairie, il vous suffira de sourcer un seul fichier :
-\begin{itemize}
-    \item \color{orange}\textbf{\$HOME\color{lime}/.Bash-utils-init.sh\color{white}}\color{white}\\[1\baselineskip]
-\end{itemize}
 
-Ce script initialise tous les modules de la librairie passés en argument lors de l'exécution de ce dernier.\\[1\baselineskip]
+\begin{justify}
+    Pour utiliser cette librairie, il vous suffira de sourcer un seul fichier :
+
+    \begin{itemize}
+        \item \color{orange}\textbf{\$HOME\color{lime}/.Bash-utils-init.sh\color{white}}\color{white}
+    \end{itemize}
+\end{justify}
+
+\begin{justify}
+    Ce script initialise tous les modules de la librairie passés en argument lors de l'exécution de ce dernier.
+\end{justify}
 
 
+% -----------------------
+
+% -----------------------------------------------
 
 \color{green}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
 
 \color{green}
 \subsection{Architecture}\color{white}
-La partie librairie de Bash Utils est un ensemble de fichiers source shell à sourcer dans un script, d'outils de développement ou encore de scripts déjà prêts à l'exécution.\\[1\baselineskip]
 
-Les dossiers contenus dans  :
+\begin{justify}
+    La partie librairie de Bash Utils est un ensemble de fichiers source shell à sourcer dans un script, d'outils de développement ou encore de scripts déjà prêts à l'exécution.
+\end{justify}
+
+
+\textbf{Liste des dossiers :}
+
 \color{blue}
 \subsubsection{bin}\color{white}
-Ce lien symbolique pointe vers le dossier \textbf{\color{lime}res/dev-tools/dev-bin\color{white}}.\\[1\baselineskip]
 
-Ce dossier contient les fichiers exécutables nécessaires au bon fonctionnement de la librairie.\\[1\baselineskip]
+\begin{justify}
+    Ce lien symbolique pointe vers le dossier \textbf{\color{lime}res/dev-tools/dev-bin\color{white}}.
+\end{justify}
+
+\begin{justify}
+    Ce dossier contient les fichiers exécutables nécessaires au bon fonctionnement de la librairie.
+\end{justify}
 
 
+% -----------------------
 
 \color{blue}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
 
 \color{blue}
 \subsubsection{docs}\color{white}
-Ce dossier contient toute la documentation utile aux développeurs et aux utilisateurs.\\[1\baselineskip]
+
+\begin{justify}
+    Ce dossier contient toute la documentation utile aux développeurs et aux utilisateurs.
+\end{justify}
 
 
+% -----------------------
 
 \color{blue}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
 
 \color{blue}
 \subsubsection{install}\color{white}
-Ce dossier contient les fichiers et dossiers nécessaires à l'installation automatique de la librairie.\\[1\baselineskip]
+
+\begin{justify}
+    Ce dossier contient les fichiers et dossiers nécessaires à l'installation automatique de la librairie.
+\end{justify}
 
 
+% -----------------------
 
 \color{blue}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
 
 \color{blue}
 \subsubsection{lib}\color{white}
-Ce dossier est le plus important de tous, car il contient tous les fichiers source de la librairie\linebreak (fonctions et variables).\\[1\baselineskip]
 
-Il contient les sous-dossiers suivants :
-\begin{itemize}
-    \item \color{lime}\textbf{functions\color{white} :} \color{white} ce sous-dossier contient tous les fichiers de fonctions dans différents sous-dossiers.\\[1\baselineskip]
+\begin{justify}
+    Ce dossier est le plus important de tous, car il contient tous les fichiers source de la librairie (fonctions et variables).
+\end{justify}
 
-    \item \color{lime}\textbf{lang\color{white} :} \color{white} ce sous-dossier contient tous les fichiers nécessaires à la traduction des scripts\linebreak (fonctionnalité future).\\[1\baselineskip]
-\end{itemize}
 
-Description des sous-dossiers du dossier \textbf{functions} :\\[1\baselineskip]
+\begin{justify}
+    Il contient les sous-dossiers suivants :
+
+    \begin{itemize}
+        \item \color{lime}\textbf{functions\color{white} :} \color{white} ce sous-dossier contient tous les fichiers de fonctions dans différents sous-dossiers.\\
+
+        \item \color{lime}\textbf{lang\color{white} :} \color{white} ce sous-dossier contient tous les fichiers nécessaires à la traduction des scripts (fonctionnalité future).
+    \end{itemize}
+\end{justify}
+
+
+\textbf{Description des sous-dossiers du dossier \textbf{functions}} :
 
 \setcounter{secnumdepth}{4}
 \paragraph{functions}\mbox{}\\
-Les sous-dossiers du dossier \textbf{functions} sont liés à un module et contiennent les fichiers source de chaque module.\\[1\baselineskip]
 
-Chaque fichier source contient des fonctions qui sont propres au nom du fichier. Par exemple, le\linebreak fichier \textbf{\color{lime}Files.lib\color{white}} du module \textbf{main} ne contient que des fonctions de traitement de fichiers.\\[1\baselineskip]
+\begin{justify}
+    Les sous-dossiers du dossier \textbf{functions} sont liés à un module et contiennent les fichiers source de chaque module.
+\end{justify}
 
+\begin{justify}
+    Chaque fichier source contient des fonctions qui sont propres au nom du fichier. Par exemple, le fichier \textbf{\color{lime}Files.lib} du module \textbf{main} ne contient que des fonctions de traitement de fichiers.
+\end{justify}
 
 
 \par\noindent\rule{\textwidth}{0.4pt}
 
 \paragraph{lang}\mbox{}\\\mbox{}\\
-\textbf{Rappel :} fonctionnalité future, certaines idées peuvent encore changer.\\[1\baselineskip]
 
-Le fichier \textbf{\color{lime}lang.csv\color{white}} contient les différentes traductions de la librairie dans un fichier au format CSV. Il sera parsé (analysé) par le script d'initialisation.\\[1\baselineskip]
+\textbf{Rappel :} fonctionnalité future, certaines idées peuvent encore changer.
 
+\begin{justify}
+    Le fichier \textbf{\color{lime}lang.csv} contient les différentes traductions de la librairie dans un fichier au format CSV. Il sera parsé (analysé) par le script d'initialisation.
+\end{justify}
 
 
 \par\noindent\rule{\textwidth}{0.4pt}
 
 \paragraph{variables}\mbox{}\\\mbox{}\\
-Chaque fichier définit des variables propres aux catégories décrites dans le nom de chaque fichier. Par exemple, les variables définies dans le fichier \textbf{\color{lime}colors.var\color{white}} sont des variables définissant le code de la couleur d'un texte à afficher.\\[1\baselineskip]
+
+\begin{justify}
+    Chaque fichier définit des variables propres aux catégories décrites dans le nom de chaque fichier. Par exemple, les variables définies dans le fichier \textbf{\color{lime}colors.var} sont des variables définissant le code de la couleur d'un texte à afficher.
+\end{justify}
 
 
+% -----------------------
 
 \color{blue}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
 
 \color{blue}
 \subsubsection{res}\color{white}
-Ce dossier contient plusieurs sous-dossiers :
-\begin{itemize}
-    \item \textbf{\color{lime}dev-tools\color{white} :} Ce dossier contient des scripts aidant au développement de la librairie, avec leurs dépendances (fichiers binaires, fichiers raccourcis \textbf{desktop}, icônes et fichiers sources dans le cas où un fichier serait trop long).\\[1\baselineskip]
 
-    \item \textbf{\color{lime}ideas\color{white} :} Ce dossier contient des fichiers où j'écris mes idées de fonctionnalités à implémenter dans la librairie.\\[1\baselineskip]
+\begin{justify}
+    Ce dossier contient plusieurs sous-dossiers :
 
-    \item \textbf{\color{lime}src\color{white} :} Ce dossier contient des scripts préparés facilitant l'utilisation d'un système UNIX, en utilisant les fonctionnalités implémentées par la librairie.\\[1\baselineskip]
+    \begin{itemize}
+        \item \textbf{\color{lime}dev-tools\color{white} :} Ce dossier contient des scripts aidant au développement de la librairie, avec leurs dépendances (fichiers binaires, fichiers raccourcis \textbf{desktop}, icônes et fichiers sources dans le cas où un fichier serait trop long).\\
 
-    \item \textbf{\color{lime}tests\color{white} :} Ce dossier contient de nombreux scripts servant ou ayant servi de fichiers de tests pour de nombreuses fonctionnalités, implémentées ou en cours d'implémentation.\\[1\baselineskip]
-\end{itemize}
+        \item \textbf{\color{lime}ideas\color{white} :} Ce dossier contient des fichiers où j'écris mes idées de fonctionnalités à implémenter dans la librairie.\\
+
+        \item \textbf{\color{lime}src\color{white} :} Ce dossier contient des scripts préparés facilitant l'utilisation d'un système UNIX, en utilisant les fonctionnalités implémentées par la librairie.\\
+
+        \item \textbf{\color{lime}tests\color{white} :} Ce dossier contient de nombreux scripts servant ou ayant servi de fichiers de tests pour de nombreuses fonctionnalités, implémentées ou en cours d'implémentation.
+    \end{itemize}
+\end{justify}
 
 
+% -----------------------
 
 \color{blue}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
 
 \color{blue}
 \subsubsection{tmp}\color{white}
-Ce dossier, absent lors du téléchargement de la librairie, est créé par le fichier d'initialisation du\linebreak module \textbf{main}, et sert à enregistrer les fichiers temporaires générés par un projet, tels que des\linebreak fichiers de logs, de traduction, etc...\\[1\baselineskip]
+
+\begin{justify}
+    Ce dossier, absent lors du téléchargement de la librairie, est créé par le fichier d'initialisation du module \textbf{main}, et sert à enregistrer les fichiers temporaires générés par un projet, tels que des fichiers de logs, de traduction, etc...
+\end{justify}
 
 
+% -----------------------
+
+% -----------------------------------------------
+
+% /////////////////////////////////////////////////////////////////////////////////////////////// %
 
 \color{red}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
 
 \color{red}
 \section{Fonctionnement}\color{white}
-Au vu du nombre de fichiers, il serait très fastidieux de mettre à jour chaque script pour sourcer de nouveaux fichiers, voire même de sourcer manuellement chaque fichier, puis de déclarer des variables, quelques fonctions, de configurer et vérifier chaque étape d'initialisation du script principal.\\[1\baselineskip]
 
-Il serait même encore plus fastidieux de réécrire tout ce code, ainsi que de le modifier dans chaque fichier en cas d'ajout de fonctionnalités ou en cas de bug, et encore plus de répéter toutes ces étapes pour chaque module à ajouter, voire à supprimer au cas où.\\[1\baselineskip]
+\begin{justify}
+    Au vu du nombre de fichiers, il serait très fastidieux de mettre à jour chaque script pour sourcer de nouveaux fichiers, voire même de sourcer manuellement chaque fichier, puis de déclarer des variables, quelques fonctions, de configurer et vérifier chaque étape d'initialisation du script principal.
+\end{justify}
 
-Fort heureusement, un script shell s'occupe de cette partie : \color{lime}\textbf{Bash-utils-init.sh}\color{white}, dans le dossier\linebreak personnel.\\[1\baselineskip]
+\begin{justify}
+    Il serait même encore plus fastidieux de réécrire tout ce code, ainsi que de le modifier dans chaque fichier en cas d'ajout de fonctionnalités ou en cas de bug, et encore plus de répéter toutes ces étapes pour chaque module à ajouter, voire à supprimer au cas où.
+\end{justify}
 
-La seule procédure que vous devez réaliser dans votre script pour utiliser les fonctionnalités\linebreak proposées par Bash Utils est de sourcer le fichier cité ci-dessus. Il s'occupera de réaliser\linebreak toutes les étapes ci-dessous. Les fichiers mentionnés sont décrits plus en détils dans\linebreak le fichier \textbf{\color{lime}Bash-utils/docs/fr/modules/Fonctionnement.pdf\color{white}}.
+\begin{justify}
+    Fort heureusement, un script shell s'occupe de cette partie : \textbf{\color{lime}Bash-utils-init.sh}, dans le dossier personnel.
+\end{justify}
+
+\begin{justify}
+    La seule procédure que vous devez réaliser dans votre script pour utiliser les fonctionnalités proposées par Bash Utils est de sourcer le fichier cité ci-dessus. Il s'occupera de réaliser toutes les étapes ci-dessous.
+\end{justify}
+
+\begin{justify}
+    Les fichiers mentionnés sont décrits plus en détils dans ce fichier :
+
+    \begin{itemize}
+        \item \textbf{\color{lime}Bash-utils/docs/fr/modules/Fonctionnement.pdf}.
+    \end{itemize}
+\end{justify}
 
 
 \color{green}
@@ -182,37 +271,62 @@ La seule procédure que vous devez réaliser dans votre script pour utiliser les
 
 \color{blue}
 \subsubsection{Variables de modules}\color{white}
-En premier lieu, le script d'initialisation initialise les variables globales contenant les chemins des\linebreak multiples dossiers du gestionnaire de modules.\\[1\baselineskip]
+
+\begin{justify}
+    En premier lieu, le script d'initialisation initialise les variables globales contenant les chemins des multiples dossiers du gestionnaire de modules.
+\end{justify}
 
 
+% -----------------------
 
 \color{blue}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
 
 \color{blue}
 \subsubsection{Version de Bash}\color{white}
-En second lieu, le script vérifie que la version de Bash utilisée soit la version 4.0.0 ou une version supérieure.\\[1\baselineskip]
+
+\begin{justify}
+    En second lieu, le script vérifie que la version de Bash utilisée soit la version 4.0.0 ou une version supérieure.
+\end{justify}
 
 
+
+% -----------------------
 
 \color{blue}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
 
 \color{blue}
 \subsubsection{Boucle d'initialisation}\color{white}
-En troisième lieu, il exécute une boucle pour initialiser chaque module passé en argument lors de\linebreak l'exécution de ce script d'initialisation.\\[1\baselineskip]
 
-D'abord, il vérifie que le module existe dans le dossier \textbf{\color{lime}\~/.Bash-utils\color{white}}, puis il source le fichier\linebreak d'initialisation de variables associé, situé dans le dossier \textbf{\color{lime}\~/.Bash-utils/config/modules/\$nom\_du\_module\color{white}} et nommé \textbf{\color{lime}module.conf\color{white}}, qui doit initialiser d'autres fichiers de configurations à placer de préférence dans ce même dossier.\\[1\baselineskip]
+\begin{justify}
+    En troisième lieu, il exécute une boucle pour initialiser chaque module passé en argument lors de l'exécution de ce script d'initialisation.
+\end{justify}
 
-Ensuite, le script en fait de même pour le fichier d'initialisation des fonctions de librairie associé, situé dans le dossier \textbf{\color{lime}\~/.Bash-utils/modules/\$nom\_du\_module\color{white}}, et nommé \textbf{\color{lime}\~/Initializer.sh\color{white}}, avant de reboucler tant que tous les modules n'ont pas été initialisés.\\[1\baselineskip]
+\begin{justify}
+    D'abord, il vérifie que le module existe dans le dossier \textbf{\color{lime}\~/.Bash-utils}, puis il source le fichier d'initialisation de variables associé, situé dans le dossier \textbf{\color{lime}\~/.Bash-utils/config/modules/\$nom\_du\_module} et nommé \textbf{\color{lime}module.conf}, qui doit initialiser d'autres fichiers de configurations à placer de préférence dans ce même dossier.
+\end{justify}
+
+\begin{justify}
+    Ensuite, le script en fait de même pour le fichier d'initialisation des fonctions de librairie associé, situé dans le dossier \textbf{\color{lime}\~/.Bash-utils/modules/\$nom\_du\_module}, et nommé \textbf{\color{lime}Initializer.sh}, avant de reboucler tant que tous les modules n'ont pas été initialisés.
+\end{justify}
 
 
+% -----------------------
 
 \color{blue}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
 
 \color{blue}
 \subsubsection{Variables de statut}\color{white}
-En quatrième et dernier lieu, le script modifie des variables de statut, dont la valeur initialement\linebreak assignée dans le fichier \textbf{\color{lime}\~/.Bash-utils/config/modules/main/Status.conf\color{white}} servait à initialiser la librairie.\\[1\baselineskip]
+
+\begin{justify}
+    En quatrième et dernier lieu, le script modifie des variables de statut, dont la valeur initialement assignée dans le fichier \textbf{\color{lime}\~/.Bash-utils/config/modules/main/Status.conf} servait à initialiser la librairie.
+\end{justify}
 
 
+% -----------------------
+
+% -----------------------------------------------
+
+% /////////////////////////////////////////////////////////////////////////////////////////////// %
 
 \color{red}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
 
@@ -221,24 +335,48 @@ En quatrième et dernier lieu, le script modifie des variables de statut, dont l
 
 \color{green}
 \subsection{Fonctions}\color{white}
-Tous les fichiers de documentation en français concernant la description des fonctions se situent dans le dossier \color{lime}\textbf{docs/fr/Bash/functions}\color{white}.\\[1\baselineskip]
+
+\begin{justify}
+    Tous les fichiers de documentation en français concernant la description des fonctions se situent dans le dossier \textbf{\color{lime}docs/fr/Bash/functions}.
+\end{justify}
 
 
+% -----------------------
+
+% -----------------------------------------------
 
 \color{green}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
 
 \color{green}
 \subsection{Variables}\color{white}
-Tous les fichiers de documentation en français concernant la description des variables se situent dans le dossier \color{lime}\textbf{docs/fr/Bash/variables}\color{white}.\\[1\baselineskip]
 
-Par ailleurs, dans les fichiers de documentation des fonctions, j'ai, respectivement, représenté le\linebreak chemin absolu des dossiers du gestionnaire de module et de la librairie ainsi :
-\begin{itemize}
-     \item \textbf{\color{orange}\$\_\_BU\_MAIN\_ROOT\_DIR\_PATH\color{white} :} Cette variable globale enregistre le chemin du dossier racine de la librairie Bash Utils, celui qui contient toutes les documentation, les fichiers sources et des fichiers de ressources.\\[1\baselineskip]
-     \item \textbf{\color{orange}\$\_\_BU\_MODULE\_UTILS\_ROOT\color{white} :} Cette variable globale enregistre le chemin du dossier racine des modules la librairie Bash Utils, celui qui est installé dans le dossier personnel de chaque\linebreak utilisateur, et qui contient tous les fichiers de configuration et d'initialisation de chaque module.\\[1\baselineskip]
-\end{itemize}
+\begin{justify}
+    Tous les fichiers de documentation en français concernant la description des variables se situent dans le dossier \textbf{\color{lime}docs/fr/Bash/variables}.
+\end{justify}
 
-La première variable est définie dans le fichier \textbf{\color{lime}\$HOME/Bash-utils-init.sh\color{white}}, tandis que la seconde variable est définie dans le fichier \textbf{\color{lime}\$HOME/.Bash-utils/config/modules/main/module.conf\color{white}}.\\[1\baselineskip]
 
+\begin{justify}
+    Par ailleurs, dans les fichiers de documentation des fonctions, j'ai, respectivement, représenté le\linebreak chemin absolu des dossiers du gestionnaire de module et de la librairie ainsi :
+
+    \begin{itemize}
+        \item \textbf{\color{orange}\$\_\_BU\_MAIN\_ROOT\_DIR\_PATH\color{white} :} Cette variable globale enregistre le chemin du dossier racine de la librairie Bash Utils, celui qui contient toutes les documentation, les fichiers sources et des fichiers de ressources.\\
+
+        \item \textbf{\color{orange}\$\_\_BU\_MODULE\_UTILS\_ROOT\color{white} :} Cette variable globale enregistre le chemin du dossier racine des modules la librairie Bash Utils, celui qui est installé dans le dossier personnel de chaque utilisateur, et qui contient tous les fichiers de configuration et d'initialisation de chaque module.
+    \end{itemize}
+\end{justify}
+
+
+
+\begin{justify}
+    La première variable est définie dans le fichier \textbf{\color{lime}\$HOME/Bash-utils-init.sh}, tandis que la seconde variable est définie dans le fichier \textbf{\color{lime}\$HOME/.Bash-utils/config/modules/main/module.conf}.
+\end{justify}
+
+
+% -----------------------
+
+% -----------------------------------------------
+
+% /////////////////////////////////////////////////////////////////////////////////////////////// %
 
 \color{red}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
 
@@ -247,20 +385,37 @@ La première variable est définie dans le fichier \textbf{\color{lime}\$HOME/Ba
 
 \color{green}
 \subsection{Configurations}\color{white}
-Pour utiliser les fonctionnalités de la librairie depuis n'importe quel chemin sans avoir à réécrire le\linebreak chemin du fichier d'initialisation dans une myriade de fichiers éparpillés sur le disque dur, il est fortement recommandé d'installer le gestionnaire de modules de la façon décrite dans le fichier \textbf{\color{lime}README INSTALL.md\color{white}}.\\[1\baselineskip]
+
+\begin{justify}
+    Pour utiliser les fonctionnalités de la librairie depuis n'importe quel chemin sans avoir à réécrire le chemin du fichier d'initialisation dans une myriade de fichiers éparpillés sur le disque dur, il est fortement recommandé d'installer le gestionnaire de modules de la façon décrite dans le fichier \textbf{\color{lime}README INSTALL.md}.
+\end{justify}
 
 
+% -----------------------
+
+% -----------------------------------------------
 
 \color{green}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
 
 \color{green}
 \subsection{Installation}\color{white}
 
+\begin{justify}
 
+\end{justify}
+
+
+% -----------------------
+
+% -----------------------------------------------
 
 \color{green}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
 
 \color{green}
 \subsection{Mise à jour}\color{white}
+
+\begin{justify}
+
+\end{justify}
 
 \end{document}
