Corrected a hidden bug that made the Headers.tex file not compiling (lines commented)

--- a/docs/fr/modules/main/functions/Headers.tex
+++ b/docs/fr/modules/main/functions/Headers.tex
@@ -14,7 +14,7 @@
 \fontfamily{}
 
 \pagecolor{black}
-\title{\color{red}Fonctions du fichier de librairie \color{lime}Headers.lib}\color{white}
+\title{\color{red}Fonctions du fichier de librairie \color{lime}Headers.lib\color{white}}
 \author{Dimitri OBEID}
 \date{2021}
 \pagestyle{fancy}
@@ -136,11 +136,11 @@ rappelant certaines fonctions ))
 \textbf{Description :}\linebreak
 Cette fonction dessine une ligne en remplissant chaque colonne du terminal avec un caractère choisi et passé en second argument.\linebreak
 
-\textbf{Paramètres :}\\[1\baselineskip]
-\begin{tabular}{|l|l|}
-\hline & \\
-\hline & \\
-end{tabular}
+% \textbf{Paramètres :}\\[1\baselineskip]
+% \begin{tabular}{|l|l|}
+% \hline & \\
+% \hline & \\
+% end{tabular}
 
 \textbf{\color{orange}p\_lineColor\color{white}} --> Ce paramètre attend un code couleur *.\linebreak
 \textbf{\color{orange}p\_lineChar\color{white}} --> Ce paramètre attend un seul caractère, qui sera affiché sur chaque colonne.\linebreak
